--- a/Process_numberplate.ipynb
+++ b/Process_numberplate.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN9KSNjYtq1BxWqqBam6Xzd",
+      "authorship_tag": "ABX9TyNVirjtzaaMDMpBuPre8ZPs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,68 +29,141 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install pyrebase4 --quiet"
+        "!pip install pyrebase4"
       ],
       "metadata": {
-        "id": "d3vBSoOVSGvq"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "d3vBSoOVSGvq",
+        "outputId": "c1cf74ec-d179-4eca-f03b-7a5e11f6958d"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m50.1/50.1 kB\u001b[0m \u001b[31m1.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m454.4/454.4 kB\u001b[0m \u001b[31m14.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.3/2.3 MB\u001b[0m \u001b[31m41.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m54.5/54.5 kB\u001b[0m \u001b[31m3.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m144.2/144.2 kB\u001b[0m \u001b[31m9.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m92.5/92.5 kB\u001b[0m \u001b[31m6.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h  Building wheel for gcloud (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
+            "langsmith 0.4.4 requires requests-toolbelt<2.0.0,>=1.0.0, but you have requests-toolbelt 0.10.1 which is incompatible.\u001b[0m\u001b[31m\n",
+            "\u001b[0m"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
         "import pyrebase\n",
         "import time\n",
-        "from datetime import datetime"
+        "from datetime import datetime\n",
+        "import re\n",
+        "from collections import defaultdict"
       ],
       "metadata": {
         "id": "mWikcJisSGIl"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
-        "id": "VbxqwyekSDkK"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 419
+        },
+        "id": "VbxqwyekSDkK",
+        "outputId": "f6a5fc3f-2f46-4fc9-f981-70b77713e957"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "---- Parking Manager Started ----\n",
+            "[INFO] Đã tạo lại 4 bản ghi lịch sử từ vehicles.\n",
+            "[INFO] Đã cập nhật daily_counts (3) và monthly_counts (2) từ lịch sử.\n",
+            "[INFO] 🚗 Xe VÀO: 29-C1 999.99 @ 2025-07-07 17:57:08\n",
+            "[INFO] Đã cập nhật daily_counts (4) và monthly_counts (2) từ lịch sử.\n",
+            "[INFO] 🚗 Xe RA: 29-C1 999.99 (2025-07-07 17:57:08) -> 2025-07-07 17:57:43\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "KeyboardInterrupt",
+          "evalue": "",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-13-650976439.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    163\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    164\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0m__name__\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"__main__\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 165\u001b[0;31m     \u001b[0mmain_loop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpoll_interval\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m/tmp/ipython-input-13-650976439.py\u001b[0m in \u001b[0;36mmain_loop\u001b[0;34m(poll_interval)\u001b[0m\n\u001b[1;32m    160\u001b[0m                 \u001b[0mdate_time\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"date_time\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    161\u001b[0m                 \u001b[0mprocess_plate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mplate\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdate_time\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 162\u001b[0;31m         \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpoll_interval\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    163\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    164\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0m__name__\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"__main__\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+          ]
+        }
+      ],
       "source": [
-        "# --- Cấu hình Firebase ---\n",
+        "# ========== Firebase config ==========\n",
         "config = {\n",
-        "    \"apiKey\": \"<YOUR_FIREBASE_API_KEY>\",\n",
-        "    \"authDomain\": \"<YOUR_PROJECT_ID>.firebaseapp.com\",\n",
+        "    \"apiKey\": \"AIzaSyCtQFHllFrIKIWhZiflNkV-4fVxl6yg5m0\",\n",
+        "    \"authDomain\": \"liencesplayeai.firebaseapp.com\",\n",
         "    \"databaseURL\": \"https://liencesplayeai-default-rtdb.firebaseio.com\",\n",
-        "    \"storageBucket\": \"<YOUR_PROJECT_ID>.appspot.com\"\n",
+        "    \"projectId\": \"liencesplayeai\",\n",
+        "    \"storageBucket\": \"liencesplayeai.firebasestorage.app\",\n",
+        "    \"messagingSenderId\": \"516014751151\",\n",
+        "    \"appId\": \"1:516014751151:web:68baec2887916762eb035a\",\n",
+        "    \"measurementId\": \"G-Z3M750GZQZ\"\n",
         "}\n",
         "\n",
         "firebase = pyrebase.initialize_app(config)\n",
         "db = firebase.database()\n",
         "\n",
-        "# --- Cấu hình số slot ---\n",
+        "# ========== Parking lot config ==========\n",
         "TOTAL_SLOTS = 100\n",
         "\n",
-        "# --- Các node trên Firebase ---\n",
+        "# ========== Firebase nodes ==========\n",
         "NUMBERPLATE_NODE = \"numberplate\"\n",
-        "PARKING_NODE = \"vehicles\"          # Danh sách xe đang đỗ (biển số -> thời gian vào)\n",
-        "STATS_NODE = \"parking_stats\"       # Thống kê slot\n",
+        "PARKING_NODE = \"vehicles\"           # Store vehicles currently in the lot\n",
+        "STATS_NODE = \"parking_stats\"        # Statistics\n",
         "DAILY_NODE = \"daily_counts\"\n",
         "MONTHLY_NODE = \"monthly_counts\"\n",
+        "HISTORY_NODE = \"history\"            # Lưu lịch sử vào/ra để đếm daily/monthly count chính xác\n",
         "\n",
-        "# --- Bộ nhớ tạm thời trên RAM ---\n",
-        "current_vehicles = {}  # {biển_số: thời_gian_đỗ}\n",
+        "def normalize_plate(plate):\n",
+        "    if not plate:\n",
+        "        return \"\"\n",
+        "    plate = plate.upper().replace(\" \", \"\").replace(\"-\", \"\")\n",
+        "    m = re.match(r\"([0-9]{2}[A-Z][0-9]?)([0-9]{3}\\.[0-9]{2})\", plate)\n",
+        "    if m:\n",
+        "        return m.group(1) + m.group(2)\n",
+        "    return plate\n",
         "\n",
-        "def get_today():\n",
-        "    return datetime.now().strftime(\"%Y-%m-%d\")\n",
+        "def get_date_str(date_time_str):\n",
+        "    try:\n",
+        "        dt = datetime.strptime(date_time_str, \"%Y-%m-%d %H:%M:%S\")\n",
+        "        return dt.strftime(\"%Y-%m-%d\")\n",
+        "    except Exception:\n",
+        "        return None\n",
         "\n",
-        "def get_month():\n",
-        "    return datetime.now().strftime(\"%Y-%m\")\n",
+        "def get_month_str(date_time_str):\n",
+        "    try:\n",
+        "        dt = datetime.strptime(date_time_str, \"%Y-%m-%d %H:%M:%S\")\n",
+        "        return dt.strftime(\"%Y-%m\")\n",
+        "    except Exception:\n",
+        "        return None\n",
         "\n",
         "def update_stats():\n",
-        "    \"\"\"Cập nhật số slot trống/đã dùng lên Firebase\"\"\"\n",
-        "    occupied = len(current_vehicles)\n",
+        "    vehicles = db.child(PARKING_NODE).get().val() or {}\n",
+        "    occupied = len(vehicles)\n",
         "    stats = {\n",
         "        \"total_slots\": TOTAL_SLOTS,\n",
         "        \"occupied_slots\": occupied,\n",
@@ -99,77 +172,111 @@
         "    }\n",
         "    db.child(STATS_NODE).set(stats)\n",
         "\n",
-        "def update_daily_count():\n",
-        "    \"\"\"Tăng lượt xe hôm nay\"\"\"\n",
-        "    today = get_today()\n",
-        "    node = f\"{DAILY_NODE}/{today}\"\n",
-        "    cur = db.child(node).get().val()\n",
-        "    count = cur.get(\"count\", 0) + 1 if cur else 1\n",
-        "    db.child(node).set({\"date\": today, \"count\": count})\n",
+        "def log_history_entry(plate, date_time):\n",
+        "    db.child(HISTORY_NODE).push({\n",
+        "        \"number_plate\": plate,\n",
+        "        \"date_time\": date_time\n",
+        "    })\n",
         "\n",
-        "def update_monthly_count():\n",
-        "    \"\"\"Tăng lượt xe tháng này\"\"\"\n",
-        "    month = get_month()\n",
-        "    node = f\"{MONTHLY_NODE}/{month}\"\n",
-        "    cur = db.child(node).get().val()\n",
-        "    count = cur.get(\"count\", 0) + 1 if cur else 1\n",
-        "    db.child(node).set({\"month\": month, \"count\": count})\n",
+        "def ensure_history_from_vehicles():\n",
+        "    \"\"\"\n",
+        "    Nếu chưa có node history, hoặc node history rỗng, tạo lại lịch sử lượt vào từ dữ liệu hiện tại trong vehicles.\n",
+        "    \"\"\"\n",
+        "    history = db.child(HISTORY_NODE).get().val()\n",
+        "    if history:\n",
+        "        print(\"[INFO] History đã tồn tại, không cần tạo lại.\")\n",
+        "        return  # Đã có lịch sử rồi\n",
+        "\n",
+        "    vehicles = db.child(PARKING_NODE).get().val() or {}\n",
+        "    count = 0\n",
+        "    for v in vehicles.values():\n",
+        "        plate = v.get(\"number_plate\", \"\")\n",
+        "        date_time = v.get(\"entry_time\", \"\")\n",
+        "        if plate and date_time:\n",
+        "            log_history_entry(plate, date_time)\n",
+        "            count += 1\n",
+        "    print(f\"[INFO] Đã tạo lại {count} bản ghi lịch sử từ vehicles.\")\n",
+        "\n",
+        "def recount_daily_monthly():\n",
+        "    \"\"\"\n",
+        "    Quét node history để đếm lại số xe vào từng ngày, từng tháng (dựa vào date_time).\n",
+        "    \"\"\"\n",
+        "    history = db.child(HISTORY_NODE).get().val() or {}\n",
+        "    daily_set = defaultdict(set)\n",
+        "    monthly_set = defaultdict(set)\n",
+        "\n",
+        "    for v in history.values():\n",
+        "        plate = normalize_plate(v.get(\"number_plate\", \"\"))\n",
+        "        date_time = v.get(\"date_time\", \"\")\n",
+        "        date_str = get_date_str(date_time)\n",
+        "        month_str = get_month_str(date_time)\n",
+        "        if plate and date_str:\n",
+        "            daily_set[date_str].add(plate)\n",
+        "        if plate and month_str:\n",
+        "            monthly_set[month_str].add(plate)\n",
+        "\n",
+        "    # Ghi counts lên Firebase\n",
+        "    for d, s in daily_set.items():\n",
+        "        db.child(DAILY_NODE).child(d).set({\"date\": d, \"count\": len(s)})\n",
+        "    for m, s in monthly_set.items():\n",
+        "        db.child(MONTHLY_NODE).child(m).set({\"month\": m, \"count\": len(s)})\n",
+        "\n",
+        "    print(f\"[INFO] Đã cập nhật daily_counts ({len(daily_set)}) và monthly_counts ({len(monthly_set)}) từ lịch sử.\")\n",
+        "\n",
+        "def find_plate_in_vehicles(plate_norm):\n",
+        "    vehicles = db.child(PARKING_NODE).get().val() or {}\n",
+        "    for k, v in vehicles.items():\n",
+        "        plate_db = v.get(\"number_plate\", \"\")\n",
+        "        if normalize_plate(plate_db) == plate_norm:\n",
+        "            return k, v.get(\"entry_time\", \"\"), plate_db\n",
+        "    return None, None, None\n",
         "\n",
         "def process_plate(plate, date_time, key):\n",
-        "    plate = plate.strip().upper()\n",
-        "    if not plate or len(plate) < 4:\n",
-        "        print(f\"[WARN] Plate không hợp lệ: {plate}\")\n",
+        "    plate_raw = plate.strip().upper()\n",
+        "    plate_norm = normalize_plate(plate_raw)\n",
+        "    if not plate_norm or len(plate_norm) < 4:\n",
+        "        print(f\"[WARN] Plate không hợp lệ: {plate_raw}\")\n",
+        "        db.child(NUMBERPLATE_NODE).child(key).remove()\n",
         "        return\n",
         "\n",
-        "    # --- Xe ĐI RA (đã từng vào) ---\n",
-        "    if plate in current_vehicles:\n",
-        "        print(f\"[INFO] 🚗 Xe RA: {plate} ({current_vehicles[plate]}) -> {date_time}\")\n",
-        "        # Xóa khỏi danh sách xe đang đỗ trên server\n",
-        "        db.child(PARKING_NODE).child(plate).remove()\n",
-        "        del current_vehicles[plate]\n",
-        "        # Cập nhật slot\n",
-        "        update_stats()\n",
-        "        # Có thể log lịch sử ra vào ở đây nếu muốn\n",
-        "    else:\n",
-        "        # --- Xe ĐI VÀO ---\n",
-        "        print(f\"[INFO] 🚗 Xe VÀO: {plate} @ {date_time}\")\n",
-        "        current_vehicles[plate] = date_time\n",
-        "        db.child(PARKING_NODE).child(plate).set({\"entry_time\": date_time})\n",
-        "        update_stats()\n",
-        "        update_daily_count()\n",
-        "        update_monthly_count()\n",
+        "    found_key, entry_time, original_plate = find_plate_in_vehicles(plate_norm)\n",
         "\n",
-        "    # Xóa entry đã xử lý khỏi queue\n",
+        "    if found_key:\n",
+        "        print(f\"[INFO] 🚗 Xe RA: {original_plate} ({entry_time}) -> {date_time}\")\n",
+        "        db.child(PARKING_NODE).child(found_key).remove()\n",
+        "        update_stats()\n",
+        "    else:\n",
+        "        print(f\"[INFO] 🚗 Xe VÀO: {plate_raw} @ {date_time}\")\n",
+        "        db.child(PARKING_NODE).push({\n",
+        "            \"number_plate\": plate_raw,\n",
+        "            \"plate_norm\": plate_norm,\n",
+        "            \"entry_time\": date_time\n",
+        "        })\n",
+        "        log_history_entry(plate_raw, date_time)\n",
+        "        update_stats()\n",
+        "        recount_daily_monthly()\n",
+        "\n",
         "    db.child(NUMBERPLATE_NODE).child(key).remove()\n",
-        "\n",
-        "def sync_current_vehicles():\n",
-        "    \"\"\"Đồng bộ danh sách xe từ Firebase vào RAM khi bắt đầu chạy\"\"\"\n",
-        "    global current_vehicles\n",
-        "    data = db.child(PARKING_NODE).get().val()\n",
-        "    if data:\n",
-        "        current_vehicles = {k: v[\"entry_time\"] if isinstance(v, dict) and \"entry_time\" in v else \"\" for k, v in data.items()}\n",
-        "    else:\n",
-        "        current_vehicles = {}\n",
         "\n",
         "def main_loop(poll_interval=3):\n",
         "    print(\"---- Parking Manager Started ----\")\n",
-        "    sync_current_vehicles()\n",
+        "    # 1. Tạo lại history nếu cần thiết\n",
+        "    ensure_history_from_vehicles()\n",
+        "    # 2. Thống kê dữ liệu có sẵn\n",
         "    update_stats()\n",
+        "    recount_daily_monthly()\n",
+        "\n",
         "    while True:\n",
-        "        # Đọc danh sách biển số mới gửi lên\n",
         "        plates = db.child(NUMBERPLATE_NODE).get().val()\n",
         "        if plates:\n",
         "            for key, value in plates.items():\n",
         "                plate = value.get(\"number_plate\", \"\").strip()\n",
         "                date_time = value.get(\"date_time\", \"\")\n",
         "                process_plate(plate, date_time, key)\n",
-        "        else:\n",
-        "            # print(\"No new plates.\")\n",
-        "            pass\n",
         "        time.sleep(poll_interval)\n",
         "\n",
         "if __name__ == \"__main__\":\n",
-        "    main_loop(poll_interval=3)  # Kiểm tra mỗi 3 giây, có thể tăng/giảm tùy nhu cầu"
+        "    main_loop(poll_interval=3)"
       ]
     }
   ]
