Được tạo bằng Colab

--- a/Process_numberplate.ipynb
+++ b/Process_numberplate.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNVirjtzaaMDMpBuPre8ZPs",
+      "authorship_tag": "ABX9TyM9yUkOclwnuoY4yGKFC5Lq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,32 +32,10 @@
         "!pip install pyrebase4"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "d3vBSoOVSGvq",
-        "outputId": "c1cf74ec-d179-4eca-f03b-7a5e11f6958d"
+        "id": "d3vBSoOVSGvq"
       },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m50.1/50.1 kB\u001b[0m \u001b[31m1.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m454.4/454.4 kB\u001b[0m \u001b[31m14.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.3/2.3 MB\u001b[0m \u001b[31m41.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m54.5/54.5 kB\u001b[0m \u001b[31m3.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m144.2/144.2 kB\u001b[0m \u001b[31m9.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m92.5/92.5 kB\u001b[0m \u001b[31m6.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h  Building wheel for gcloud (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
-            "langsmith 0.4.4 requires requests-toolbelt<2.0.0,>=1.0.0, but you have requests-toolbelt 0.10.1 which is incompatible.\u001b[0m\u001b[31m\n",
-            "\u001b[0m"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -76,52 +54,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 419
-        },
-        "id": "VbxqwyekSDkK",
-        "outputId": "f6a5fc3f-2f46-4fc9-f981-70b77713e957"
+        "id": "VbxqwyekSDkK"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "---- Parking Manager Started ----\n",
-            "[INFO] Đã tạo lại 4 bản ghi lịch sử từ vehicles.\n",
-            "[INFO] Đã cập nhật daily_counts (3) và monthly_counts (2) từ lịch sử.\n",
-            "[INFO] 🚗 Xe VÀO: 29-C1 999.99 @ 2025-07-07 17:57:08\n",
-            "[INFO] Đã cập nhật daily_counts (4) và monthly_counts (2) từ lịch sử.\n",
-            "[INFO] 🚗 Xe RA: 29-C1 999.99 (2025-07-07 17:57:08) -> 2025-07-07 17:57:43\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "KeyboardInterrupt",
-          "evalue": "",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-13-650976439.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    163\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    164\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0m__name__\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"__main__\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 165\u001b[0;31m     \u001b[0mmain_loop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpoll_interval\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m/tmp/ipython-input-13-650976439.py\u001b[0m in \u001b[0;36mmain_loop\u001b[0;34m(poll_interval)\u001b[0m\n\u001b[1;32m    160\u001b[0m                 \u001b[0mdate_time\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"date_time\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    161\u001b[0m                 \u001b[0mprocess_plate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mplate\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdate_time\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 162\u001b[0;31m         \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpoll_interval\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    163\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    164\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0m__name__\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"__main__\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# ========== Firebase config ==========\n",
+        "# Fill with your firebase config\n",
         "config = {\n",
-        "    \"apiKey\": \"AIzaSyCtQFHllFrIKIWhZiflNkV-4fVxl6yg5m0\",\n",
-        "    \"authDomain\": \"liencesplayeai.firebaseapp.com\",\n",
-        "    \"databaseURL\": \"https://liencesplayeai-default-rtdb.firebaseio.com\",\n",
-        "    \"projectId\": \"liencesplayeai\",\n",
-        "    \"storageBucket\": \"liencesplayeai.firebasestorage.app\",\n",
-        "    \"messagingSenderId\": \"516014751151\",\n",
-        "    \"appId\": \"1:516014751151:web:68baec2887916762eb035a\",\n",
-        "    \"measurementId\": \"G-Z3M750GZQZ\"\n",
+        "    \"apiKey\": \"___________________________\",\n",
+        "    \"authDomain\": \"___________________________\",\n",
+        "    \"databaseURL\": \"___________________________\",\n",
+        "    \"projectId\": \"___________________________\",\n",
+        "    \"storageBucket\": \"___________________________\",\n",
+        "    \"messagingSenderId\": \"___________________________\",\n",
+        "    \"appId\": \"___________________________\",\n",
+        "    \"measurementId\": \"___________________________\"\n",
         "}\n",
         "\n",
         "firebase = pyrebase.initialize_app(config)\n",
@@ -136,7 +85,7 @@
         "STATS_NODE = \"parking_stats\"        # Statistics\n",
         "DAILY_NODE = \"daily_counts\"\n",
         "MONTHLY_NODE = \"monthly_counts\"\n",
-        "HISTORY_NODE = \"history\"            # Lưu lịch sử vào/ra để đếm daily/monthly count chính xác\n",
+        "HISTORY_NODE = \"history\"            # Save I/O history for accurate daily/monthly counting\n",
         "\n",
         "def normalize_plate(plate):\n",
         "    if not plate:\n",
@@ -180,12 +129,12 @@
         "\n",
         "def ensure_history_from_vehicles():\n",
         "    \"\"\"\n",
-        "    Nếu chưa có node history, hoặc node history rỗng, tạo lại lịch sử lượt vào từ dữ liệu hiện tại trong vehicles.\n",
+        "    If there is no history node, or the history node is empty, recreate the entry history from the current data in vehicles.\n",
         "    \"\"\"\n",
         "    history = db.child(HISTORY_NODE).get().val()\n",
         "    if history:\n",
-        "        print(\"[INFO] History đã tồn tại, không cần tạo lại.\")\n",
-        "        return  # Đã có lịch sử rồi\n",
+        "        print(\"[INFO] History already exists, no need to recreate.\")\n",
+        "        return\n",
         "\n",
         "    vehicles = db.child(PARKING_NODE).get().val() or {}\n",
         "    count = 0\n",
@@ -195,11 +144,11 @@
         "        if plate and date_time:\n",
         "            log_history_entry(plate, date_time)\n",
         "            count += 1\n",
-        "    print(f\"[INFO] Đã tạo lại {count} bản ghi lịch sử từ vehicles.\")\n",
+        "    print(f\"[INFO] Created {count} History logs from vehicles.\")\n",
         "\n",
         "def recount_daily_monthly():\n",
         "    \"\"\"\n",
-        "    Quét node history để đếm lại số xe vào từng ngày, từng tháng (dựa vào date_time).\n",
+        "    Scan node history to count the number of vehicles on each day, each month (based on date_time).\n",
         "    \"\"\"\n",
         "    history = db.child(HISTORY_NODE).get().val() or {}\n",
         "    daily_set = defaultdict(set)\n",
@@ -215,13 +164,13 @@
         "        if plate and month_str:\n",
         "            monthly_set[month_str].add(plate)\n",
         "\n",
-        "    # Ghi counts lên Firebase\n",
+        "    # Write counts to Firebase\n",
         "    for d, s in daily_set.items():\n",
         "        db.child(DAILY_NODE).child(d).set({\"date\": d, \"count\": len(s)})\n",
         "    for m, s in monthly_set.items():\n",
         "        db.child(MONTHLY_NODE).child(m).set({\"month\": m, \"count\": len(s)})\n",
         "\n",
-        "    print(f\"[INFO] Đã cập nhật daily_counts ({len(daily_set)}) và monthly_counts ({len(monthly_set)}) từ lịch sử.\")\n",
+        "    print(f\"[INFO] Updated daily_counts ({len(daily_set)}) and monthly_counts ({len(monthly_set)}) from history.\")\n",
         "\n",
         "def find_plate_in_vehicles(plate_norm):\n",
         "    vehicles = db.child(PARKING_NODE).get().val() or {}\n",
@@ -235,18 +184,18 @@
         "    plate_raw = plate.strip().upper()\n",
         "    plate_norm = normalize_plate(plate_raw)\n",
         "    if not plate_norm or len(plate_norm) < 4:\n",
-        "        print(f\"[WARN] Plate không hợp lệ: {plate_raw}\")\n",
+        "        print(f\"[WARN] Plate is not valid: {plate_raw}\")\n",
         "        db.child(NUMBERPLATE_NODE).child(key).remove()\n",
         "        return\n",
         "\n",
         "    found_key, entry_time, original_plate = find_plate_in_vehicles(plate_norm)\n",
         "\n",
         "    if found_key:\n",
-        "        print(f\"[INFO] 🚗 Xe RA: {original_plate} ({entry_time}) -> {date_time}\")\n",
+        "        print(f\"[INFO] 🚗 Car Out: {original_plate} ({entry_time}) -> {date_time}\")\n",
         "        db.child(PARKING_NODE).child(found_key).remove()\n",
         "        update_stats()\n",
         "    else:\n",
-        "        print(f\"[INFO] 🚗 Xe VÀO: {plate_raw} @ {date_time}\")\n",
+        "        print(f\"[INFO] 🚗 Car Entry: {plate_raw} @ {date_time}\")\n",
         "        db.child(PARKING_NODE).push({\n",
         "            \"number_plate\": plate_raw,\n",
         "            \"plate_norm\": plate_norm,\n",
@@ -260,9 +209,9 @@
         "\n",
         "def main_loop(poll_interval=3):\n",
         "    print(\"---- Parking Manager Started ----\")\n",
-        "    # 1. Tạo lại history nếu cần thiết\n",
+        "    # 1. Recreate history if necessary\n",
         "    ensure_history_from_vehicles()\n",
-        "    # 2. Thống kê dữ liệu có sẵn\n",
+        "    #2. Available data statistics\n",
         "    update_stats()\n",
         "    recount_daily_monthly()\n",
         "\n",
