Được tạo bằng Colab

--- a/Process_numberplate.ipynb
+++ b/Process_numberplate.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM9yUkOclwnuoY4yGKFC5Lq",
+      "authorship_tag": "ABX9TyPqRNszIOwoKw2vLqifAwtW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install pyrebase4"
+        "!pip install pyrebase4 --quiet"
       ],
       "metadata": {
         "id": "d3vBSoOVSGvq"
@@ -49,7 +49,7 @@
       "metadata": {
         "id": "mWikcJisSGIl"
       },
-      "execution_count": 9,
+      "execution_count": 2,
       "outputs": []
     },
     {
