Được tạo bằng Colab

--- a/Process_numberplate.ipynb
+++ b/Process_numberplate.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPqRNszIOwoKw2vLqifAwtW",
+      "authorship_tag": "ABX9TyN5A+L3hNxZABf8W8/r/eKN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
       "metadata": {
         "id": "d3vBSoOVSGvq"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -49,7 +49,7 @@
       "metadata": {
         "id": "mWikcJisSGIl"
       },
-      "execution_count": 2,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -63,14 +63,14 @@
         "# ========== Firebase config ==========\n",
         "# Fill with your firebase config\n",
         "config = {\n",
-        "    \"apiKey\": \"___________________________\",\n",
-        "    \"authDomain\": \"___________________________\",\n",
-        "    \"databaseURL\": \"___________________________\",\n",
-        "    \"projectId\": \"___________________________\",\n",
-        "    \"storageBucket\": \"___________________________\",\n",
-        "    \"messagingSenderId\": \"___________________________\",\n",
-        "    \"appId\": \"___________________________\",\n",
-        "    \"measurementId\": \"___________________________\"\n",
+        "  \"apiKey\": \"AIzaSyCtQFHllFrIKIWhZiflNkV-4fVxl6yg5m0\",\n",
+        "  \"authDomain\": \"liencesplayeai.firebaseapp.com\",\n",
+        "  \"databaseURL\": \"https://liencesplayeai-default-rtdb.firebaseio.com\",\n",
+        "  \"projectId\": \"liencesplayeai\",\n",
+        "  \"storageBucket\": \"liencesplayeai.firebasestorage.app\",\n",
+        "  \"messagingSenderId\": \"516014751151\",\n",
+        "  \"appId\": \"1:516014751151:web:68baec2887916762eb035a\",\n",
+        "  \"measurementId\": \"G-Z3M750GZQZ\"\n",
         "}\n",
         "\n",
         "firebase = pyrebase.initialize_app(config)\n",
@@ -121,10 +121,11 @@
         "    }\n",
         "    db.child(STATS_NODE).set(stats)\n",
         "\n",
-        "def log_history_entry(plate, date_time):\n",
+        "def log_history_entry(plate, date_time, direction):\n",
         "    db.child(HISTORY_NODE).push({\n",
         "        \"number_plate\": plate,\n",
-        "        \"date_time\": date_time\n",
+        "        \"date_time\": date_time,\n",
+        "        \"direction\": direction\n",
         "    })\n",
         "\n",
         "def ensure_history_from_vehicles():\n",
@@ -142,7 +143,7 @@
         "        plate = v.get(\"number_plate\", \"\")\n",
         "        date_time = v.get(\"entry_time\", \"\")\n",
         "        if plate and date_time:\n",
-        "            log_history_entry(plate, date_time)\n",
+        "            log_history_entry(plate, date_time, \"in\")\n",
         "            count += 1\n",
         "    print(f\"[INFO] Created {count} History logs from vehicles.\")\n",
         "\n",
@@ -155,6 +156,8 @@
         "    monthly_set = defaultdict(set)\n",
         "\n",
         "    for v in history.values():\n",
+        "        if v.get(\"direction\") != \"in\":\n",
+        "          continue\n",
         "        plate = normalize_plate(v.get(\"number_plate\", \"\"))\n",
         "        date_time = v.get(\"date_time\", \"\")\n",
         "        date_str = get_date_str(date_time)\n",
@@ -193,6 +196,7 @@
         "    if found_key:\n",
         "        print(f\"[INFO] 🚗 Car Out: {original_plate} ({entry_time}) -> {date_time}\")\n",
         "        db.child(PARKING_NODE).child(found_key).remove()\n",
+        "        log_history_entry(original_plate, date_time, \"out\")\n",
         "        update_stats()\n",
         "    else:\n",
         "        print(f\"[INFO] 🚗 Car Entry: {plate_raw} @ {date_time}\")\n",
@@ -201,7 +205,7 @@
         "            \"plate_norm\": plate_norm,\n",
         "            \"entry_time\": date_time\n",
         "        })\n",
-        "        log_history_entry(plate_raw, date_time)\n",
+        "        log_history_entry(plate_raw, date_time, \"in\")\n",
         "        update_stats()\n",
         "        recount_daily_monthly()\n",
         "\n",
