Được tạo bằng Colab

--- a/Process_numberplate.ipynb
+++ b/Process_numberplate.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN5A+L3hNxZABf8W8/r/eKN",
+      "authorship_tag": "ABX9TyMaSUmOI1psPecIStNobZDT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,14 +63,14 @@
         "# ========== Firebase config ==========\n",
         "# Fill with your firebase config\n",
         "config = {\n",
-        "  \"apiKey\": \"AIzaSyCtQFHllFrIKIWhZiflNkV-4fVxl6yg5m0\",\n",
-        "  \"authDomain\": \"liencesplayeai.firebaseapp.com\",\n",
-        "  \"databaseURL\": \"https://liencesplayeai-default-rtdb.firebaseio.com\",\n",
-        "  \"projectId\": \"liencesplayeai\",\n",
-        "  \"storageBucket\": \"liencesplayeai.firebasestorage.app\",\n",
-        "  \"messagingSenderId\": \"516014751151\",\n",
-        "  \"appId\": \"1:516014751151:web:68baec2887916762eb035a\",\n",
-        "  \"measurementId\": \"G-Z3M750GZQZ\"\n",
+        "  \"apiKey\": \"\",\n",
+        "  \"authDomain\": \"\",\n",
+        "  \"databaseURL\": \"\",\n",
+        "  \"projectId\": \"\",\n",
+        "  \"storageBucket\": \"\",\n",
+        "  \"messagingSenderId\": \"\",\n",
+        "  \"appId\": \"\",\n",
+        "  \"measurementId\": \"\"\n",
         "}\n",
         "\n",
         "firebase = pyrebase.initialize_app(config)\n",
